[package]
name = "minigrep_eoin"
version = "0.1.1"
authors = ["Eoin Moore <eomoore@tcd.ie>"]
edition = "2018"
description = "Simple, rust-based implementation of grep"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
